--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,14 @@ h1 {
 .city-button {
   margin-top: 5px;
 }
+
+.forecast {
+  display: flex;
+}
+
+.day {
+  margin-right: 25px;
+  border-style: solid;
+  width: 20%;
+  text-align: center;
+}
