--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@ h1 {
 
 #search-button {
   width: 100px;
-
-  /* need search button to be longer  */
+  background-color: lightgreen;
 }
 
 #button-list {
@@ -19,7 +18,6 @@ h1 {
 }
 .divider {
   border-top: 3px solid #bbb;
-  /*fix length of divider*/
 }
 
 .city-button {
@@ -35,4 +33,18 @@ h1 {
   border-style: solid;
   width: 20%;
   text-align: center;
+  color: darkblue;
+}
+
+h2 {
+  text-align: center;
+}
+
+h3 {
+  text-align: left;
+}
+
+.current-day {
+  text-align: center;
+  color: darkblue;
 }
