--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,20 @@ h2 {
   text-align: center;
 }
 
-h3 {
-  text-align: left;
-}
-
 .current-day {
   text-align: center;
   color: darkblue;
+}
+
+.green {
+  background-color: green;
+}
+
+.red {
+  background-color: red;
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
 }
